--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
               >
                 <div>
                   <div class="realisations-thumb">
-                    <img src="gardenia.png" alt="Aperçu du projet Bien Être Gardenia">
+                    <img src="photogardenia.png" alt="Aperçu du projet Bien Être Gardenia">
                   </div>
                   <div class="realisations-tag">E-commerce</div>
                   <div class="realisations-title"><strong>Bien Être Gardenia</strong></div>
@@ -1048,7 +1048,7 @@
               >
                 <div>
                   <div class="realisations-thumb">
-                    <img src="yourshape.png" alt="Aperçu du projet Your Shape">
+                    <img src="photoyourshape.png" alt="Aperçu du projet Your Shape">
                   </div>
                   <div class="realisations-tag">E-commerce</div>
                   <div class="realisations-title"><strong>Your Shape</strong></div>
