Corrige les erreurs html-validate

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio – Imane Benazzouz</title>
   <meta name="theme-color" content="#000000">
 
@@ -17,7 +17,7 @@
   <!-- NAVBAR -->
   <nav class="navbar" aria-label="Navigation principale">
     <a href="#top" class="navbar-brand">Imane B.</a>
-    <button class="navbar-toggle" aria-label="Ouvrir le menu" aria-expanded="false">&#9776;</button>
+    <button class="navbar-toggle" type="button" aria-label="Ouvrir le menu" aria-expanded="false">&#9776;</button>
     <ul class="navbar-links">
       <li><a href="#apropos">A propos</a></li>
       <li><a href="#competences">Competences</a></li>
@@ -31,7 +31,7 @@
   <!-- HERO / ACCUEIL -->
   <div id="top" class="hero">
     <h1 class="hero-title">IMANE BENAZZOUZ</h1>
-    <p class="hero-subtitle">Developpeuse Full-Stack & IA</p>
+    <p class="hero-subtitle">Developpeuse Full-Stack &amp; IA</p>
     <p class="hero-tagline">Je conçois des solutions web performantes et intelligentes, du backend à l'interface utilisateur.</p>
 
     <div class="hero-buttons">
@@ -130,9 +130,9 @@
           </div>
 
           <div class="skills-block">
-            <div class="skills-block-title">Machine Learning & IA</div>
+            <div class="skills-block-title">Machine Learning &amp; IA</div>
             <ul class="skills-list">
-              <li>Perceptron & MLP (classification, fonctions d’activation, rétropropagation)</li>
+              <li>Perceptron &amp; MLP (classification, fonctions d’activation, rétropropagation)</li>
               <li>Réseaux de neurones convolutionnels (CNN) pour le traitement d’images</li>
               <li>Transformers / modèles de langage (compréhension et traitement du texte)</li>
               <li>Arbres de décision (modèles interprétables, explicabilité)</li>
@@ -413,7 +413,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.79 19.79 0 0 1 2.12 4.18 2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
             <div>
               <div class="contact-card-label">Telephone</div>
-              <div class="contact-card-value">06 67 65 03 12</div>
+              <div class="contact-card-value">06&nbsp;67&nbsp;65&nbsp;03&nbsp;12</div>
             </div>
           </a>
 
