--- a/index.html
+++ b/index.html
@@ -230,10 +230,15 @@
               </div>
 
               <!-- Ikraa -->
-              <div class="realisations-card">
+              <a
+                class="realisations-card"
+                href="http://69.62.111.228:8080"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <div>
-                  <div class="realisations-thumb realisations-thumb--placeholder">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
+                  <div class="realisations-thumb">
+                    <img src="ikraa.png" alt="Aperçu du projet Ikraa" loading="lazy">
                   </div>
                   <div class="realisations-tag">Application educative</div>
                   <div class="realisations-title"><strong>Ikraa</strong></div>
@@ -242,7 +247,7 @@
                     conception, développement, tests et déploiement, avec une interface pensée pour l’apprentissage.
                   </p>
                 </div>
-              </div>
+              </a>
 
               <!-- WhoamAI -->
               <div class="realisations-card">
