--- a/index.html
+++ b/index.html
@@ -214,6 +214,26 @@
                 </div>
               </a>
 
+              <!-- Click Event Paris -->
+              <a
+                class="realisations-card"
+                href="http://69.62.111.228:8082"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div>
+                  <div class="realisations-thumb realisations-thumb--placeholder">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>
+                  </div>
+                  <div class="realisations-tag">Site vitrine</div>
+                  <div class="realisations-title"><strong>Click Event Paris</strong></div>
+                  <p class="realisations-desc">
+                    Site vitrine — Click Event Paris : présentation des machines (photobooth, vidéobooth, livre d'or audio),
+                    simulateur de devis automatique, page avis clients, formulaire de contact et page contenu/blog.
+                  </p>
+                </div>
+              </a>
+
               <!-- App Vélib' -->
               <div class="realisations-card">
                 <div>
